# tango-doc

./: .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  Makefile  README.md  Readme.md  add_lic  build-documentation.sh  convert.sh  make.bat  replace  requirements.txt  tango.html  tango.rst  tango.tex
advanced/: ThreadsManagement.eps  advanced.lyx  advanced.tex  alarm.eps  control.eps  events.cpp  main.cpp.lines
appendix/: appendix.lyx  appendix.tex  idl.lyx  (+4 more)
ds_writing/: ESRFlogo.tex  Makefile.am  device_et.eps  ds_writing.lyx  ds_writing.tex  images.tex  startup.eps  startup.fig  w_attribute.fig
ds_writing/advanced/: BClass.java  BClass.lines  Com.lines  main.cpp  main.lines
ds_writing/cpp_exchanging/: ConstDevString.cpp.lines  ConstStrArray.cpp  ConstStrArray.cpp.lines  any.cpp  longstring.lines
ds_writing/cpp_started/: DevArray.cpp.lines  DevStrArray.cpp  DevStrArray.cpp.lines
ds_writing/dance/: dancing.ps  dancing.tif
ds_writing/java_exchanging/: any_ins.doc
ds_writing/java_started/: DevStrArray.java  DevStrArray.java.lines
ds_writing/logging/: log_java.java
ds_writing/model/: DeviceImpl.h  attribute.lines  devreadposition.h  multiattribute.lines
ds_writing/nt_server/: MYService.cpp  main_service_mfc.cpp  main_service_mfc.cpp.lines
ds_writing/writing/: PositionAttr.h.line  devreadpos.h  steppermotor2.cpp.lines  steppermotor3.cpp.lines  steppermotor_short.h.lines  steppermotorclass2.cpp
ds_writing/writing_java/: StepperMotor2.java  StepperMotor4.java.lines  StepperMotorClass1.java.lines  cmd1.java  out.lines
(+4847 files in other folders)
